--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 3D Voxel Painter (C++)/build-VoxelPainter-Desktop_Qt_5_12_2_MinGW_64_bit-Debug/Makefile.Release
 3D Voxel Painter (C++)/build-VoxelPainter-Desktop_Qt_5_12_2_MinGW_64_bit-Debug/Makefile.Debug
 3D Voxel Painter (C++)/build-VoxelPainter-Desktop_Qt_5_12_2_MinGW_64_bit-Debug/Makefile.Release
+*.Debug
+*.Release
