--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 3D Voxel Painter (C++)/build-VoxelPainter-Desktop_Qt_5_12_2_MinGW_64_bit-Debug/Makefile.Release
 *.Debug
 *.Release
+3D Voxel Painter (C++)/VoxelPainter.pro.user
+3D Voxel Painter (C++)/build-VoxelPainter-Desktop_Qt_5_12_2_MinGW_64_bit-Debug/debug/main.o
+3D Voxel Painter (C++)/build-VoxelPainter-Desktop_Qt_5_12_2_MinGW_64_bit-Debug/debug/sculptor.o
+*.exe
